# CarutiGL

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.hpp  CaruticraftApplication.cpp  CaruticraftApplication.hpp  Result.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp  main2.cpp
src/Caruticraft/: Block.hpp  Chunk.cpp  Chunk.hpp  Cube.hpp  EnvironmentManager.cpp  EnvironmentManager.hpp
src/Core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Cube.hpp  Entity.cpp  Entity.hpp  Result.hpp  Shader.cpp  Shader.hpp  Skybox.hpp  Texture.cpp  Texture.hpp  Utils.hpp
src/Core/Graphics/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Core/Input/: MouseInput.cpp  MouseInput.hpp
src/Resources/Shaders/: FragmentShader.frag  VertexShader.vert
third/fmt/include/fmt/: core.h
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/glfw/include/GLFW/: glfw3.h
third/glm/include/glm/: common.hpp  exponential.hpp  geometric.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
third/glm/include/glm/detail/: setup.hpp  type_half.inl  type_quat.hpp
third/glm/include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp  matrix_transform.hpp  quaternion_common.hpp  quaternion_common.inl  quaternion_relational.hpp  quaternion_transform.hpp  quaternion_trigonometric.hpp  vector_relational.hpp
third/glm/include/glm/gtc/: epsilon.hpp  matrix_transform.hpp  quaternion.hpp
third/stb/include/: stb_image.h
